Created a struct for deviceId

--- a/Game Of Phones/Base.lproj/Main.storyboard
+++ b/Game Of Phones/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -143,11 +143,24 @@
                                 <color key="textColor" red="0.70980392156862748" green="0.70980392156862748" blue="0.70980392156862748" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ifi-3R-Rgf">
+                                <rect key="frame" x="33" y="611" width="349" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.68235294117647061" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Submit">
+                                    <color key="titleColor" red="0.098039215686274508" green="0.074509803921568626" blue="0.035294117647058823" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Kw2-2m-BN0" kind="show" id="iBU-lq-ysI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.14509803921568629" green="0.14117647058823529" blue="0.14117647058823529" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="bSJ-45-axv" firstAttribute="top" secondItem="idc-tE-pPW" secondAttribute="bottom" constant="41" id="6IP-3E-xaC"/>
+                            <constraint firstItem="QDW-ta-57P" firstAttribute="top" secondItem="Ifi-3R-Rgf" secondAttribute="bottom" constant="95" id="JdV-L0-qUf"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ifi-3R-Rgf" secondAttribute="trailing" constant="12" id="Y3m-oR-mDr"/>
                             <constraint firstItem="bSJ-45-axv" firstAttribute="centerX" secondItem="3sN-9A-CmX" secondAttribute="centerX" id="cfq-bf-G6Y"/>
+                            <constraint firstItem="Ifi-3R-Rgf" firstAttribute="leading" secondItem="3sN-9A-CmX" secondAttribute="leadingMargin" constant="13" id="md9-8T-qVc"/>
                         </constraints>
                     </view>
                     <connections>
